--- a/frontend/templates/frontend/chart_calcluster.html
+++ b/frontend/templates/frontend/chart_calcluster.html
@@ -1,14 +1,15 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load staticfiles %}
 
 {% block title %}
 {{ site.name }}
 {% endblock %}
 
 {% block head %}
-<script type="text/javascript" src="/media/frontend/js/d3.min.js"></script>
-<script src="/media/frontend/js/highchart/highcharts.js"></script>
-<link rel="stylesheet" href="/media/frontend/css/cal.css"/>
+<script type="text/javascript" src="{% static 'frontend/js/d3.min.js' %}"></script>
+<script src="{% static 'frontend/js/highchart/highcharts.js' %}"></script>
+<link rel="stylesheet" href="{% static 'frontend/css/cal.css' %}"/>
 <style>
 .cluster_patterns { 
 
