--- a/frontend/templates/frontend/chart_histogram.html
+++ b/frontend/templates/frontend/chart_histogram.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load staticfiles %}
 
 {% block title %}
 {{ site.name }}
 {% endblock %}
 
 {% block head %}
-<script src="/media/frontend/js/highchart/highcharts.js"></script>
-<script src="/media/frontend/js/highchart/highcharts-more.js"></script>
+<script src="{% static 'frontend/js/highchart/highcharts.js' %}"></script>
+<script src="{% static 'frontend/js/highchart/highcharts-more.js' %}"></script>
 
 {% endblock %}
 
